--- a/styles.css
+++ b/styles.css
@@ -68,9 +68,9 @@ section div input[type="text"] {
 
 .weekdays {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); 
+    grid-template-columns: repeat(7, 1fr); 
     gap: 20px;
-    width: 207%; 
+    width: 129%; 
     justify-items: stretch; 
 }
 
@@ -103,7 +103,7 @@ section div input[type="text"] {
 }
 
 .weekdays .day textarea:focus {
-    border: 1px solid black; /* Чорний контур при фокусі */
+    border: 1px solid black; 
     outline: none;
 }
 
